# gchess

./: .gitignore  AUTHORS  Makefile.am  autogen.sh  configure.ac
po/: POTFILES.in
src/: ChessboardWidget.cc  ChessboardWidget.h  MainWindow.cc  MainWindow.h  Makefile.am  main.cc
