AC_PREREQ([2.67])
AC_INIT([gchess], [0.1])
AC_CONFIG_SRCDIR([src/main.cc])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE
AM_SILENT_RULES([yes])
AM_MAINTAINER_MODE([enable])
AC_CONFIG_FILES([
Makefile
src/Makefile
po/Makefile.in
])

LT_INIT
AC_PROG_CXX
AC_PROG_INSTALL

PKG_CHECK_MODULES(GCHESS, [gtkmm-3.0])
AC_SUBST([GCHESS_LIBS])
AC_SUBST([GCHESS_CFLAGS])

IT_PROG_INTLTOOL([0.40])

AM_GNU_GETTEXT([external])
AM_GNU_GETTEXT_VERSION([0.17])

GETTEXT_PACKAGE=gchess
AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["$GETTEXT_PACKAGE"], [Gettext Package])
AC_SUBST(GETTEXT_PACKAGE)

AC_OUTPUT
